<resources>
    <string name="app_name">Lab_04</string>
    <string name="name">Product Name:</string>
    <string name="price">Product Price:</string>
    <string name="id">Product ID:</string>
    <string name="ntA">Not Assigned</string>
    <string name="add">ADD</string>
    <string name="find">FIND</string>
    <string name="delete">DELETE</string>
    <string name="viewall">VIEW ALL</string>
</resources>